argocd/istio-demo/auth-api/deployment.yaml
apiVersion:  apps/v1
kind: Deployment
metadata:
  labels:
    app: microservice-app-example
  name: auth-api
spec:
  replicas: 1
  selector:
    matchLabels:
      service: auth-api
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: microservice-app-example
        service: auth-api
    spec:
      containers:
      - env:
        - name: AUTH_API_PORT
          value: "8081"
        - name: JWT_SECRET
          value: myfancysecret
        - name: USERS_API_ADDRESS
          value: http://users-api:8083
        - name: ZIPKIN_URL
          value: http://zipkin:9411/api/v2/spans          
        image: image-registry.openshift-image-registry.svc:5000/laboratorio/auth-api:1.0.0
        name: auth-api
        ports:
        - containerPort: 8081
        imagePullPolicy: Always
      restartPolicy: Always
