argocd/istio-demo/auth-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: microservice-app-example
    version: v1
  name: auth-api
spec:
  ports:
  - port: 8081
  selector:
    service: auth-api
