argocd/istio-demo/auth-api/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: auth-api
spec:
  host: auth-api
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-api
spec:
  hosts:
    - auth-api
  http:
    - route:
        - destination:
            host: auth-api
            subset: v1
